fix menu icon color, position in mobile, and fix main navbar wraparound issue

--- a/themes/alrp/sass/_partials/_legacy.scss
+++ b/themes/alrp/sass/_partials/_legacy.scss
@@ -1073,19 +1073,10 @@ q:before, q:after {
 		float: none;
 		margin: 10px 10px 25px;
 	}
-
-        img {
-            
-            margin: 0;
-            padding: 0;
-
-             #footer {
-                      
-               
-             }
+    
+        .icon-bar {
+                background-color: #C93320;
         }
-
-
 }
 
 @media (max-width: 992px) { 
@@ -1098,6 +1089,10 @@ q:before, q:after {
 	.navbar-toggle {
 		display: block;
 	}
+
+        .icon-bar {
+                background-color: #C93320;
+        }
 }
 	
 
